minimal html done

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,34 @@
   </head>
 
   <body>
+    <header>
+      <h1>
+        Online Bookstore
+      </h1>
+    </header>
+    <section>
+      <h2>Filter by Genre</h2>
+      <select>
+        <option>All genres</option>
+        <option>Fiction</option>
+        <option>Non-fiction</option>
+        <option>Mystery</option>
+        <option>Fantasy</option>
+        <option>Computer and technology</option>
+      </select>
+    </section>
+    <section>
+      <div>
+        <img src="" alt="">
+        <h3>Python for Data Analysis: Data Wrangling with pandas, NumPy, and Jupyter</h3>
+        <p>Author: Wes McKinney</p>
+        <p>Genre: Computer & Technology</p>
+        <p>Price: &#36; 33.99</p>
+      </div>
+    </section>
+
+    <footer>
+      <p>&#169; 2023 Online Bookstore</p>
+    </footer>
   </body>
 </html>
