button bottom fix

--- a/src/index.html
+++ b/src/index.html
@@ -119,11 +119,13 @@
         >
 
         <h3 class="card__title">Introduction to Algorithms, fourth edition</h3>
-        <p>Author: Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, Clifford Stein</p>
+        <div>
+          <p>Author: Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, Clifford Stein</p>
 
-        <p>Genre: Computer & Technology</p>
+          <p>Genre: Computer & Technology</p>
 
-        <p>Price: $112.99</p>
+          <p>Price: $112.99</p>
+        </div>
 
         <button class="card__button">Add to cart</button>
       </div>
